# jurassic

./: CMakeLists.txt
include/: version.h
product/: CMakeLists.txt
product/raptor/: CMakeLists.txt
product/trex/: CMakeLists.txt
product/triceratops/: CMakeLists.txt
scripts/: build.py  jurassic.py
